QA: bug fix by not using transparent text color on dark theme, rotate device text was invisible due to that

--- a/src/styles/views/_main.scss
+++ b/src/styles/views/_main.scss
@@ -13,7 +13,7 @@ html {
     --blue: #2E8AAE;
     --green: #2DA8AF;
     --red: #F7DEE4;
-    --dark: rgba(0,0,0, 0);
+    --dark: #D2566E;
 
     --pinkBgLight: #F7DEE4;
     --blueBgLight:   #D8EBF8;
