--- a/src/styles/views/rotateDevice.scss
+++ b/src/styles/views/rotateDevice.scss
@@ -5,6 +5,7 @@
     pointer-events: all;
     padding: 0;
     background-color: var(--primaryBg);
+    transition: background-color 0.4s ease-in-out;
 
     .innerWrapper {
         justify-content: center;
@@ -22,6 +23,7 @@
         height: 38px;
         border-radius: 4px;
         border: 2px solid var(--primary);
+        transition: border 0.4s ease-in-out;
 
         // &:after {
         //     content: '';
